# androbot

./: .env.example  .gitignore  Cargo.toml  README.md  system_prompt.txt
scripts/: config.sh  llm-run.sh  llm-setup.sh  run.sh  setup.sh  tunnel-cf.sh  tunnel-ng.sh  tunnel-pinggy.sh
src/: main.rs
src/config/: mod.rs
src/routes/: mod.rs  setup.rs  webhook.rs
src/services/: database.rs  env_store.rs  facebook.rs  llm.rs  mod.rs  rag.rs  telegram.rs
