[package]
name = "Androbot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"] }
calamine = "0.30"
dotenvy = "0.15.7"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
teloxide = "0.17.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "sync"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres"] }
